
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
android:background="@drawable/b4"
tools:openDrawer="start">

     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"

         android:background="@color/ContentTranscolor"
         android:alpha="1">
          <android.support.v7.widget.Toolbar
              android:id="@+id/toolbar"
              android:layout_width="match_parent"
              android:layout_height="?attr/actionBarSize"
              android:theme="@style/SearchViewTheme"
              android:background="@color/colorPrimary" />


          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
               android:layout_marginTop="120dp"
              android:orientation="vertical">
               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/et_UserId"
                   android:imeOptions="actionNext"
                   android:nextFocusForward="@+id/et_password"
                   android:layout_marginTop="15dp"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:text=""
                   android:singleLine="true"
                   android:textColor="@color/black"
                   android:background="@drawable/et_sign_in"
                   android:hint="@string/UserId"
                   android:gravity="center"/>
               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/et_password"
                   android:imeOptions="actionDone"
                   android:layout_marginTop="15dp"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:textColor="@color/black"
                   android:background="@drawable/et_sign_in"
                   android:hint="@string/Password"
                   android:singleLine="true"
                   android:text=""
                   android:inputType="textPassword"
                   android:gravity="center"/>

               <Button
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/btn_signIN"
                   android:text="@string/Login"
                   android:textColor="@color/white"
                   android:textAllCaps="false"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:textSize="18sp"
                   android:layout_marginTop="10dp"
                   android:background="@drawable/btn_sign_in"/>
            <!--  <Button
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/btn_signUser"
                   android:text="@string/SignUp"
                   android:textColor="@color/black"
                   android:textAllCaps="false"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:textSize="18sp"
                   android:layout_marginTop="10dp"
                   android:background="@drawable/btn_sign_in"/>-->
               <TextView
                   android:id="@+id/textRegister"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Not register? Sign up now."
                   android:textColor="#DB7219"
                   android:padding="16dp"
                   android:gravity="center_horizontal"
                   android:clickable="true"
                   android:layout_marginBottom="16dp"/>


          </LinearLayout>


     </LinearLayout>

</android.support.v4.widget.DrawerLayout>
